<resources>
    <string name="app_name">WFP Stunting Pishin, Baseline</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
    completions."
  </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="nextSection"> اگلا سیکشن </string>
    <string name="addMember"> افراد کا اندراج </string>
    <string name="dcstatus"> انٹریو کا نتیجہ</string>
    <string name="complete"> مکمل</string>
    <string name="incomplete">نا مکمل</string>
    <string name="participant_id">Participant ID</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other"> دیگر (وضاحت کریں) </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="yes"> ہاں </string>
    <string name="no"> نہیں </string>
    <string name="notavail"> گہر بند ہے / اجازت دینے والا موجود نہیں </string>
    <string name="none">  کچھ نہیں</string>
    <string name="dcna">قابل اطلاق نہیں</string>
    <string name="times">تعداد</string>
    <string name="male"> مرد </string>
    <string name="female"> عورت </string>
    <string name="day"> دن </string>
    <string name="month"> مھینہ </string>
    <string name="year"> سال </string>
    <string name="hour"> گھنٹے </string>
    <string name="min"> منٹ</string>
    <string name="Frequency"> تعداد </string>
    <string name="kg">کلو گرام</string>
  <string name="never">کبھی نہیں</string>
    <string name="spblName">بچے کا نام</string>
    <string name="card"> کارڈ کے مطابق ویسکسینشن کی تصدیق </string>
    <string name="recall"> ماں کے مطابق </string>
    <string name="atbirth"> At Birth </string>
    <string name="bcg"> BCG </string>
    <string name="opv0"> OPV-0  </string>
    <string name="at6weeks"> At age of 6 weeks </string>
    <string name="opv1"> OPV-1 </string>
    <string name="penta1"> Penta-1  </string>
    <string name="pneumo1"> Pneumo-1  </string>
    <string name="at10weeks"> At age of 10 weeks </string>
    <string name="opv2"> OPV-2  </string>
    <string name="penta2"> Penta-2  </string>
    <string name="pneumo2"> Pneumo-2 </string>
    <string name="at14weeks"> At age of 14 weeks </string>
    <string name="opv3"> OPV-3  </string>
    <string name="penta3"> Penta-3  </string>
    <string name="pneumo3"> Pneumo 3 </string>
    <string name="ipv"> IPV  </string>
    <string name="at9month"> At age of 9 months </string>
    <string name="measles1"> Measles-1  </string>
    <string name="at15month"> At age 15 months </string>
    <string name="measles2"> Measels-2  </string>
    <string name="vitaminA"> Vitamin A </string>
    <string name="bdheading"> Births and Deaths in the Last One Year </string>
    <string name="bdheadingsub"> پہچلے سال آپ کے گھر میں کتنی پیدائشیں ہوئی اور 5 سال سے کم بچوں کی اموات کتنی ہوئی ۔اور وہ مائیں جن کا حمل کے دوران ،زچگی کے دوران یا پھر زچگی کے بعد 42 دن کے اندر اموات ہوئی ہوں؟ </string>
    <string name="bda"> Indicators </string>
    <string name="bdb"> Statistics None = 0 </string>
    <string name="bdba"> Number </string>
    <string name="bdc"> تاریخ پیدائش </string>
    <string name="bdd"> تاریخ وفات </string>
    <string name="bd01"> حمل ضائع ہونا </string>
    <string name="bd02"> مردہ پیدائش </string>
    <string name="bd03"> زندہ پیدائش </string>
    <string name="bd04"> 7 دن کے اندر بچوں کی اموات </string>
    <string name="bd05"> 8 سے 28 دن میں بچوں کی اموات </string>
    <string name="bd06">  29 سے 364 دنوں کے اندر بچوں کی اموات </string>
    <string name="bd07">    12 سے 59 ماہ کے اندر بچوں کی اموات </string>
    <string name="bd08"> ماں کی حمل کے دوران یا زچگی کے دوران یا زچگی کے 42 دن تک کی اموات </string>
    <string name="rsvp"> کیا آپ جواب دہندہ ہیں؟ </string>
    <string name="spbla01">  تحصیل کا نام </string>
    <string name="spbla02">  یونین کونسل کا نام </string>
    <string name="spbla03">  گاؤں یا علاقہ کا نام </string>
    <string name="spbla03b">  LHW </string>
    <string name="spbla04">  گھر کا نمبر </string>
    <string name="spbla11">  جواب دہندہ کا نام </string>
    <string name="spbla12">  جواب دہندہ کی عمر </string>
    <string name="spbla13">  جواب دہندہ کی تعلیم </string>
    <string name="spbla14">  جواب دہندہ کا پیشہ </string>
    <string name="spbla05">  جواب دہندہ کون ہے؟ </string>
    <string name="spbla05a">  حاملہ عورت </string>
    <string name="spbla05b">  دودھ پلانے والی ماں </string>
    <string name="spbla05c">  5 سال سے کم عمر بچے کی ماں </string>
    <string name="spbla06">  مطالعہ شرکاء کی قسم </string>
    <string name="spbla06a">  حاملہ عورت </string>
    <string name="spbla06b">  دودھ پلانے والی ماں </string>
    <string name="spbla06c">  6 سے 23 مہینے کے بچے </string>
    <string name="spbla06d">  24 سے 59 مہینے کے بچے </string>
    <string name="spbla07"> گھر کے افراد اور شرکاء کی تعداد </string>
    <string name="spbla07t"> گھر کے کل افراد کی تعداد </string>
    <string name="spbla07pw"> حاملہ عورت </string>
    <string name="spbla07mw"> 5 سال سے کم عمر بچوں کی ماؤں کی تعداد </string>
    <string name="spbla07lw"> دودھ پلانے والی ماؤں کی تعداد </string>
    <string name="spbla07a"> 6 ماہ سے کم عمر بچے </string>
    <string name="spbla07b"> 6 سے 23 مہینے کے بچے </string>
    <string name="spbla07c"> 24 سے 59 مہینے کے بچے </string>
  <string name="spbla08"> کیا جوابدہندہ مطالعے میں شامل ہونے کے لیے رضامند ہے؟ </string>
    <string name="secBLabel">  خاندان کی معلومات </string>
    <string name="spblb01">  گھر کے افراد کا نام گھر کے سربراہ سے شروع کریں. </string>
    <string name="spblb02">  جنس </string>
    <string name="spblb02m">  مرد </string>
    <string name="spblb02f">  عورت </string>
    <string name="spblb03">  منتخب عورت کی آئ ڈی </string>
    <string name="spblb04">  عمر </string>
    <string name="spblb04y">  سال </string>
    <string name="spblb04m">  ہینے </string>
    <string name="spblb04d">  دن </string>
    <string name="spblb05">  تعلیمی معیار </string>
    <string name="spblb05a">  پرائمری </string>
    <string name="spblb05b">  مڈل پاس </string>
    <string name="spblb05c">  سیکنڈری </string>
    <string name="spblb05d">  انٹرمیڈیٹ </string>
    <string name="spblb05e">  گریجویشن </string>
    <string name="spblb05f">  ماسٹرز </string>
    <string name="spblb05g">  ایم فل / پی ایچ ڈی </string>
    <string name="spblb06">  پیشہ </string>
    <string name="spblb06a">  گھریلو عورت </string>
    <string name="spblb06b"> ڈاکٹر / انجینئر / ماسٹر / مینیجر وغیرہ </string>
    <string name="spblb06c">  کلرک / ٹیکنیکل </string>
    <string name="spblb06d">  سیلز اور سروسز </string>
    <string name="spblb06e">     ہنر مند مزدور </string>
    <string name="spblb06f">  غیر ہنر مند مزدور  </string>
    <string name="spblb06g">  زراعت </string>
    <string name="spblb06h">  کاروبار </string>
    <string name="spblb06i">  شاگرد </string>
    <string name="spblb06j">  بیروز گار </string>
    <string name="spblb07">ازدواجی حیثیت</string>
    <string name="spblb07a">شادی شدہ</string>
    <string name="spblb07b">غیر شادی شدہ</string>
    <string name="spblcheading">  سماجی اقتصادی معلومات </string>
    <string name="spblc01">  آپ کی مادری زبان کیا ہے؟ </string>
    <string name="spblc01a">  اردو </string>
    <string name="spblc01b">  پنجابی </string>
    <string name="spblc01c">  سندھی </string>
    <string name="spblc01d">  پشتو </string>
    <string name="spblc01e">  بلوچی </string>
    <string name="spblc01f">  فارسی </string>
    <string name="spblc02">  آپ کےگھرکے ممبران کےلئے پینے کے پانی کا سب سے بڑا ذریعہ کیا ہے؟ </string>
    <string name="spblc02a">  گھرمیں نلکا </string>
    <string name="spblc02b">  پلاٹ میں نلکا </string>
    <string name="spblc02c">  عوامی نلکا </string>
    <string name="spblc02d">  ٹیوب ویل یا بور کا پانی </string>
    <string name="spblc02e">  ہینڈ پمپ </string>
    <string name="spblc02f">  تالاب محفوظ </string>
    <string name="spblc02g">  غیر محفوظ تالاب </string>
    <string name="spblc02h">  چشمہ محفوظ </string>
    <string name="spblc02i">  چشمہ غیر محفوظ </string>
    <string name="spblc02j">  بارش کا پانی </string>
    <string name="spblc02k">  ٹنکر کا پانی </string>
    <string name="spblc02l">  فلٹریشن پلانٹ </string>
    <string name="spblc02m">  چھوٹے ٹینک والا پانی </string>
    <string name="spblc02n">  سطح والا پانی(دریا ،ڈیم ،جھیل، تالاب،نہر، آبپاشی کےلئے نہر </string>
    <string name="spblc02o">  بوتل کا پانی </string>
    <string name="spblc03">  کیا آپ پانی کو محفوظ بنانے کے لئے کچھ کرتے ہیں؟ </string>
    <string name="spblc04">  اگر ہاں تو عام طور پر پینے کے پانی کو محفوظ بنانے کے لئے کونسا طریقہ استعمال کرتے ہیں؟ </string>
    <string name="spblc04a">  ابالتے ہیں </string>
    <string name="spblc04b">  کلورین ؍بلیچ ملاتے ہیں </string>
    <string name="spblc04c">  کپڑےکے ذریعے چھانتے ہیں۔ </string>
    <string name="spblc04d">  واٹر فلٹر استعمال کرتے ہیں </string>
    <string name="spblc04e">  سورج کی شعاعوں سے محفوظ کرتے ہیں۔ </string>
    <string name="spbld01">  براہ مہربانی وہ جگہ دکھا ئیں جہاں آپ اور آپ کے گھروالے اکثر ہاتھ دھوتے ہیں؟ </string>
    <string name="spbld01a">  مشاہدہ کیا </string>
    <string name="spbld01b">  مشاہدہ نہیں کیا </string>
    <string name="spbld01c">  رہا یشی جگہ اور پلاٹ میں موجود نہیں </string>
    <string name="spbld01d">  دیکھنے کی اجازت نہیں </string>
    <string name="spbld02">  ہاتھ دھونے کے لئے مخصوص جگہ پر پانی کی موجودگی کا مشاہدہ </string>
    <string name="spbld02a">  پانی موجود ہے </string>
    <string name="spbld02b">  پانی موجود نہیں ہے </string>
    <string name="spbld03"> صابن، ڈٹرجنٹ یا دیگر صفائی ایجنٹ کی موجودگی کا مشاہدہ</string>
    <string name="spbld03a">  نہانے یا ہاتھ دھونے ولا صابن </string>
    <string name="spbld03b">  ڈیٹرجن پاوڈریا پانی جیسی پیسٹ </string>
    <string name="spbld03c">  مائع یا پانی والا صابن </string>
    <string name="spbld03d">  خاک /مٹی/ریت </string>
    <string name="spbld04">  کیاآپ کے گھر میں ہاتھ دھونے کے لئے کوئی صابن یا ڈٹرجنٹ ہے </string>
    <string name="spbld05">  اگرہاں تو کیا آپ مجھے دکھا سکتے ہیں ؟ </string>
    <string name="spbld05a">  صابن </string>
    <string name="spbld05b">  ڈیٹرجنٹ/مائع/ پاوڈر </string>
    <string name="spbld05c">  مائع صابن </string>
    <string name="spbld05d">  مٹی/راکھ </string>
    <string name="spbld05e">  کچھ نہیں </string>
    <string name="spbld06">  کن حالات میں آپ صابن سے ہاتھ دھوتے ہو۔
    یہ کھلا سوال ہے کوئی بھی جواب پڑھ کے نہیں سنانا ہے۔ہر سوال کےوقفے کے بعد بار بار دھرانا ہے جب تک جوابدہندہ سمجھیں کہ ان کے پاس کوئی اور جواب نہیں۔ </string>
    <string name="spbld06a">  کھانا تیار کرنے سے پہلے </string>
    <string name="spbld06b"> کھانا پکانے سے پہلے  </string>
    <string name="spbld06c"> کھانا کھانے سے پہلے   </string>
    <string name="spbld06d">  بچے کو  کھانا کھلانے  سے پہلے  </string>
    <string name="spbld06e"> بچے کو  ما ں کا دودھ پلانے سے پہلے  </string>
    <string name="spbld06f">  بچے کا پاخانہ  صاف  کرنے کے  بعد </string>
    <string name="spbld06g">  بچے کی نیپی تبدیل کرنے کے بعد  </string>
    <string name="spbld06i">  لیٹرین استعمال کرنے کے بعد  </string>
    <string name="spble01a">  پہلا ذرئعہ آمدنی </string>
    <string name="spble01b">  دوسرا ذرئعہ آمدنی </string>
    <string name="spble01c">  تیسرا ذرئعہ آمدنی </string>
    <string name="spble02">  تمام ذرائع سے آپ کی ماہانہ آمدنی کیا ہے؟ </string>
</resources>